[package]
name = "texture-synthesis-cli"
description = "A CLI for texture-synthesis"
repository = "https://github.com/EmbarkStudios/texture-synthesis"
version = "0.7.1"
authors = [
    "Embark <opensource@embark-studios.com>",
    "Anastasia Opara <anastasiaopara@gmail.com>",
    "Tomasz Stachowiak <h3@h3.gd>",
]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/texture-synthesis"
homepage = "https://github.com/EmbarkStudios/texture-synthesis"
categories = ["multimedia::images"]
keywords = ["texture", "synthesis", "procedural", "cli"]

[[bin]]
name = "texture-synthesis"
path = "src/main.rs"
bench = false

[dependencies]
# We unfortunately can't use clicolors-control which is used by indicatif
# because it only ever operates on stdout, even though we only ever print
# to stderr. This is also why indicatif colors don't work if you pipe
# the image output :(
atty = "0.2.13"
indicatif = "0.13.0"
minifb = { version = "0.15.1", optional = true }
structopt = "0.3.7"
texture-synthesis = { version = "0.7.1", path = "../lib" }

[features]
default = []
progress = ["minifb"]
