[package]
name = "texture-synthesis"
description = "Multiresolution Stochastic Texture Synthesis, a non-parametric example-based algorithm for image generation"
repository = "https://github.com/EmbarkStudios/texture-synthesis"
version = "0.4.0"
authors = [
    "Embark <opensource@embark-studios.com>",
    "Anastasia Opara <anastasiaopara@gmail.com>",
    "Tomasz Stachowiak <h3@h3.gd>",
]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/texture-synthesis"
homepage = "https://github.com/EmbarkStudios/texture-synthesis"
categories = ["multimedia::images"]
keywords = ["texture", "synthesis", "procedural"]

# We don't want the example images in the publish crate
exclude = ["/imgs"]

[dependencies]
crossbeam-utils = "0.6"
lodepng = "2.4.2"
modulo = "0.1.2"
num_cpus = "1.10.1"
rand = "0.7.0"
rand_pcg = "0.2.0"
rstar = "0.5.0"

[dependencies.failure]
version = "0.1.5"
default-features = false
features = []

[dependencies.image]
version = "0.22.1"
default-features = false
features = ["jpeg", "png_codec", "tga", "bmp"]
